# university-management-system

./: README.md
data/: assignments.csv  courses.csv  enrollments.csv  professors.csv  students.csv
robot-sensor-system/: CMakeLists.txt  README.md
robot-sensor-system/include/: sensor.h  utils.h
robot-sensor-system/src/: main.cpp  sensor.cpp  utils.cpp
src/: main  main.cpp
